# record

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: native-release.yml
native-record/: Cargo.toml  build.rs
native-record/src/: main.rs  store.rs
src/: App.test.tsx  App.tsx  index.css
src-tauri/: tauri.conf.json
src/components/: task-dialog.tsx  task-row.tsx  window-controls.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  textarea.tsx
src/lib/: task-api.ts  tasks.test.ts  tasks.ts
src/test/: setup.ts
