[package]
name = "record-native"
version = "0.1.0"
description = "A native no-WebView Record task panel"
authors = ["you"]
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
eframe = { version = "0.31", default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
  "x11",
] }
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
